@@ -1,3 +1,9 @@
+2005-04-12  Frank Ch. Eigler  <fche@redhat.com>
+
+	PR mudflap/19266
+	* testsuite/libmudflap.c++/c++frags.exp: Also test -O permutation.
+	* testsuite/libmudflap.c++/pass57-frag.cxx: New test.
+
 2005-04-04  Alan Modra  <amodra@bigpond.net.au>
 
 	* mf-runtime.c (__mfu_unregister): Warning fix for char unsigned.
