@@ -1,3 +1,10 @@
+2005-04-12  Frank Ch. Eigler  <fche@redhat.com>
+
+	PR mudflap/19266
+	From Richard Henderson <rth@redhat.com>:
+	* tree-mudflap.c (mf_build_check_statement_for): Correct block
+	splitting logic.
+
 2005-04-12  Dorit Naishlos  <dorit@il.ibm.com>
 
 	* tree-cfg.c (tree_verify_flow_info): Use LABEL_EXPR_LABEL.
